--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<zeta.android.myntra.ui.views.navigation.HackyDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/zeta_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    tools:context=".ui.activity.NavigationActivity"
     tools:openDrawer="start">
 
     <include
@@ -24,4 +25,12 @@
         app:itemTextColor="@color/zeta_md_black_1000"
         app:menu="@menu/activity_navigation_drawer" />
 
-</android.support.v4.widget.DrawerLayout>
+    <fragment
+        android:id="@+id/navigation_right_drawer"
+        android:name="zeta.android.myntra.ui.fragment.navigation.NavigationRightDrawerFragment"
+        android:layout_width="@dimen/navigation_drawer_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        android:fitsSystemWindows="true" />
+
+</zeta.android.myntra.ui.views.navigation.HackyDrawerLayout>
