--- a/app/src/main/res/layout/fragment_navigation_right_logged_in_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_right_logged_in_drawer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<zeta.android.myntra.ui.fragment.navigation.ScrimInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<zeta.android.myntra.ui.views.navigation.ScrimInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,4 +9,4 @@
     app:insetForegroundCompat="@color/colorPrimaryDark">
 
 
-</zeta.android.myntra.ui.fragment.navigation.ScrimInsetsFrameLayout>
+</zeta.android.myntra.ui.views.navigation.ScrimInsetsFrameLayout>
