--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,7 +4,9 @@
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="nav_header_image_height_width">60dp</dimen>
-    <dimen name="navigation_drawer_width">320dp</dimen>
+
+    <dimen name="navigation_right_drawer_width">300dp</dimen>
+    <dimen name="navigation_left_drawer_width">300dp</dimen>
 
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
