--- a/app/src/main/res/values/strings_menu.xml
+++ b/app/src/main/res/values/strings_menu.xml
@@ -4,7 +4,9 @@
     <string name="zeta_menu_search">search fashion</string>
     <string name="zeta_menu_list">search list view</string>
     <string name="zeta_menu_grid">search grid view</string>
-    <string name="zeta_menu_navigation_right">open profile</string>
+    <string name="zeta_menu_navigation_right"> profile</string>
+    <string name="zeta_menu_camera">visual search</string>
+    <string name="zeta_menu_mic">voice search</string>
 
     <!-- Temp -->
     <string name="action_button_toast_text">Action Button Clicked with URL: %s</string>
