--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -9,7 +9,7 @@
 
     <ProgressBar
         android:id="@+id/zeta_progress_bar"
-        style="?android:attr/progressBarStyleInverse"
+        pdpStyleResponse="?android:attr/progressBarStyleInverse"
         android:layout_width="@dimen/zeta_progress_bar_width_height"
         android:layout_height="@dimen/zeta_progress_bar_width_height"
         android:layout_gravity="center"
