--- a/app/src/main/res/values/strings_navigation.xml
+++ b/app/src/main/res/values/strings_navigation.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="zeta_navigation_right_guest_express_your_style">express your pdpStyleResponse!</string>
+    <string name="zeta_navigation_right_guest_express_your_style">express your style!</string>
     <string name="zeta_navigation_right_guest_express_your_style_sub_title">Log In or Sign Up to like, collect and manage orders</string>
 
 </resources>
