--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
 
     <ProgressBar
         android:id="@+id/zeta_progress_bar"
-        pdpStyleResponse="?android:attr/progressBarStyleInverse"
+        style="?android:attr/progressBarStyleInverse"
         android:layout_width="@dimen/zeta_progress_bar_width_height"
         android:layout_height="@dimen/zeta_progress_bar_width_height"
         android:layout_gravity="center"
@@ -17,7 +17,7 @@
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/search_view_button"
-        pdpStyleResponse="@style/IndigoButton"
+        style="@style/IndigoButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
