--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -7,7 +7,7 @@
 
     <ProgressBar
         android:id="@+id/zeta_progress_bar"
-        pdpStyleResponse="?android:attr/progressBarStyleInverse"
+        style="?android:attr/progressBarStyleInverse"
         android:layout_width="@dimen/zeta_progress_bar_width_height"
         android:layout_height="@dimen/zeta_progress_bar_width_height"
         android:layout_gravity="center"
