--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -6,4 +6,14 @@
         <attr name="insetForegroundCompat" format="reference|color" />
     </declare-styleable>
 
+    <declare-styleable name="ZetaFont">
+
+        <attr name="fontStyle" format="enum">
+            <enum name="regular" value="0" />
+            <enum name="regularBold" value="1" />
+            <enum name="regularItalics" value="2" />
+            <enum name="regularLeitura" value="3" />
+        </attr>
+    </declare-styleable>
+
 </resources>
