Left and right navigation change - temp

--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -18,13 +18,23 @@
         android:id="@+id/zeta_nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        android:visibility="gone"
         app:headerLayout="@layout/nav_header_navigation"
         app:itemIconTint="@color/zeta_md_black_1000"
         app:itemTextColor="@color/zeta_md_black_1000"
         app:menu="@menu/activity_navigation_drawer" />
 
+    <!-- left navigation -->
+    <fragment
+        android:id="@+id/navigation_left_drawer"
+        android:name="zeta.android.myntra.ui.fragment.login.NavigationLeftDrawerFragment"
+        android:layout_width="@dimen/navigation_left_drawer_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true" />
+
+    <!-- right navigation -->
     <fragment
         android:id="@+id/navigation_right_drawer"
         android:name="zeta.android.myntra.ui.fragment.navigation.NavigationRightGuestSessionDrawerFragment"
