--- a/app/src/main/res/layout/view_left_nav_sub_menu.xml
+++ b/app/src/main/res/layout/view_left_nav_sub_menu.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
-    android:background="@color/zeta_md_red_50"
+    android:layout_height="200dp"
+    android:background="@color/zeta_md_yellow_A100"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/header_menu_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
+        android:text="submenu"
         android:layout_gravity="center"
         android:layout_marginTop="150dp"
         android:textSize="50dp"/>
