Remove the navigation view

--- a/app/src/main/res/layout/fragment_navigation_left_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_left_drawer.xml
@@ -13,15 +13,22 @@
         android:layout_height="match_parent"
         android:fillViewport="true">
 
-        <zeta.android.myntra.ui.views.navigation.LeftNavHeaderView
-            android:id="@+id/left_nav_header_view"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
 
-        <zeta.android.myntra.ui.views.navigation.LeftNavFooterView
-            android:id="@+id/left_nav_footer_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <zeta.android.myntra.ui.views.navigation.LeftNavHeaderView
+                android:id="@+id/left_nav_header_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <zeta.android.myntra.ui.views.navigation.LeftNavFooterView
+                android:id="@+id/left_nav_footer_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
     </ScrollView>
 
 </zeta.android.myntra.ui.views.navigation.ScrimInsetsFrameLayout>
