--- a/app/src/main/res/layout/view_navigation_drawer_secondary_content.xml
+++ b/app/src/main/res/layout/view_navigation_drawer_secondary_content.xml
@@ -3,57 +3,49 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingRight="@dimen/no_padding_margin"
-        android:paddingLeft="@dimen/navigation_padding_left"
         android:paddingEnd="@dimen/no_padding_margin"
+        android:showDividers="middle"
+        android:divider="@color/divider_color"
+        android:paddingLeft="@dimen/navigation_padding_left"
+        android:paddingRight="@dimen/no_padding_margin"
         android:paddingStart="@dimen/navigation_padding_left">
 
         <zeta.android.myntra.views.common.ZetaTextView
+            style="@style/NavigationText.SubMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center|left"
-            tools:text="test"
-            android:drawablePadding="@dimen/default_2x_padding_margin"
-            android:drawableLeft="@drawable/ic_home_black_48dp"
+            android:layout_marginEnd="@dimen/no_padding_margin"
             android:layout_marginLeft="@dimen/navigation_padding_left"
             android:layout_marginRight="@dimen/no_padding_margin"
             android:layout_marginStart="@dimen/navigation_padding_left"
-            android:layout_marginEnd="@dimen/no_padding_margin"
-            tools:ignore="RtlHardcoded" />
+            android:drawableLeft="@drawable/ic_settings_black_24dp"
+            android:drawablePadding="@dimen/default_4x_padding_margin"
+            android:drawableTint="@color/colorPrimary"
+            android:gravity="center|left"
+            android:text="@string/myntra_navigation_left_secondary_menu_settings"
+            tools:ignore="RtlHardcoded"
+            tools:text="test" />
 
         <zeta.android.myntra.views.common.ZetaTextView
+            style="@style/NavigationText.SubMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center|left"
-            tools:text="test2"
-            android:drawablePadding="@dimen/default_2x_padding_margin"
-            android:drawableLeft="@drawable/ic_home_black_48dp"
+            android:layout_marginEnd="@dimen/no_padding_margin"
             android:layout_marginLeft="@dimen/navigation_padding_left"
             android:layout_marginRight="@dimen/no_padding_margin"
             android:layout_marginStart="@dimen/navigation_padding_left"
-            android:layout_marginEnd="@dimen/no_padding_margin"
-            tools:ignore="RtlHardcoded" />
-
-
-        <zeta.android.myntra.views.common.ZetaTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:drawableLeft="@drawable/ic_info_black_24dp"
+            android:drawablePadding="@dimen/default_4x_padding_margin"
+            android:drawableTint="@color/colorPrimary"
             android:gravity="center|left"
-            tools:text="test3"
-            android:drawablePadding="@dimen/default_2x_padding_margin"
-            android:drawableLeft="@drawable/ic_home_black_48dp"
-            android:layout_marginLeft="@dimen/navigation_padding_left"
-            android:layout_marginRight="@dimen/no_padding_margin"
-            android:layout_marginStart="@dimen/navigation_padding_left"
-            android:layout_marginEnd="@dimen/no_padding_margin"
-            tools:ignore="RtlHardcoded" />
-
+            android:text="@string/myntra_navigation_left_secondary_menu_about"
+            tools:ignore="RtlHardcoded"
+            tools:text="test2" />
 
     </LinearLayout>
 
