--- a/app/src/main/res/values/styles_navigation.xml
+++ b/app/src/main/res/values/styles_navigation.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <style name="NavigationText">
-        <item name="android:textAllCaps">true</item>
+        <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/zeta_md_black_1000</item>
     </style>
 
